History
=======

1.1 (unreleased)
----------------

- Don't break JS when jQuery is undefined. This happened for eg. on
  wildcard.foldercontents folder_content view
  [petschki]


1.0 - 2014-05-08
----------------

- Update superfish.js from 1.4.8 to 1.7.3
  and hoverIntent.js from r5 to r7
  [fRiSi]

  .. ATTENTION:: This update breaks css compatibility with the previous version!

- Add default formatting for superfish menu based on the `DEMO SKIN`
  in the `superfish default css
  <https://github.com/joeldbirch/superfish/blob/master/dist/css/superfish.css>`_
  to make it fit the `Sunburst Theme`

  Superfish Menu Layout changed from

  ``<li><span class="selected"><a .../></span></li>`` to

  ``<li class="selected"><a .../></li>``

  since javascript could not handle the
  additional span tag for setting the `.sf-with-ul` class.
  [fRiSi]


0.6 - 2010-08-11
----------------

- fixed dropdown for IE7 and IE8
  [fRiSi]

- replace `'` with ``&#39;`` instead of ``&apos;`` since
  IE7/8 can't handle this xhtml entity
  (http://inthemaze.net/post/2008/04/08/46-ie7-and-apos)
  [fRiSi]


0.5 - 2010-06-17
----------------

-  use `official hoverIntent.js`_ with docstring and versioninfo
   and replaced ``(function($){})(jQuery);`` with
   ``jQuery(function($){});`` syntax so the script does not conflict with
   collective.carousel (when both are merged to the same file by portal_javascript).
   [fRiSi]

   .. _`official hoverIntent.js`: http://cherne.net/brian/resources/jquery.hoverIntent.js

0.4 - 2010-05-12
----------------

- removed desc.replace(...) and added a custom entities method to fix #1.
  [saily]

- don't use version in metadata.xml for the package version in setup.py.
  the metadata version this is meant to reflect the version of the GS profile
  and must not be mixed up with the package version.  [fRiSi]

0.3 - 2010-03-17
----------------

- Replace " with &quot; to keep valid HTML if description contains quotes.
  [saily]
