@@ -1,13 +1,13 @@
 /*
- * jQuery Superfish Menu Plugin - v1.7.4
- * Copyright (c) 2013 Joel Birch
+ * jQuery Superfish Menu Plugin - v1.7.5
+ * Copyright (c) 2014 Joel Birch
  *
  * Dual licensed under the MIT and GPL licenses:
  *	http://www.opensource.org/licenses/mit-license.php
  *	http://www.gnu.org/licenses/gpl.html
  */
 
-;(function ($) {
+;(function ($, w) {
 	"use strict";
 
 	var methods = (function () {
@@ -22,7 +22,7 @@
 				var ios = /iPhone|iPad|iPod/i.test(navigator.userAgent);
 				if (ios) {
 					// iOS clicks only bubble as far as body children
-					$(window).load(function () {
+					$(w).load(function () {
 						$('body').children().on('click', $.noop);
 					});
 				}
@@ -31,6 +31,9 @@
 			wp7 = (function () {
 				var style = document.documentElement.style;
 				return ('behavior' in style && 'fill' in style && /iemobile/i.test(navigator.userAgent));
+			})(),
+			unprefixedPointerEvents = (function () {
+				return (!!w.PointerEvent);
 			})(),
 			toggleMenuClasses = function ($menu, o) {
 				var classes = c.menuClass;
@@ -50,9 +53,14 @@
 				$li.children('a').toggleClass(c.anchorClass);
 			},
 			toggleTouchAction = function ($menu) {
-				var touchAction = $menu.css('ms-touch-action');
+				var msTouchAction = $menu.css('ms-touch-action');
+				var touchAction = $menu.css('touch-action');
+				touchAction = touchAction || msTouchAction;
 				touchAction = (touchAction === 'pan-y') ? 'auto' : 'pan-y';
-				$menu.css('ms-touch-action', touchAction);
+				$menu.css({
+					'ms-touch-action': touchAction,
+					'touch-action': touchAction
+				});
 			},
 			applyHandlers = function ($menu, o) {
 				var targets = 'li:has(' + o.popUpSelector + ')';
@@ -65,6 +73,9 @@
 						.on('mouseleave.superfish', targets, out);
 				}
 				var touchevent = 'MSPointerDown.superfish';
+				if (unprefixedPointerEvents) {
+					touchevent = 'pointerdown.superfish';
+				}
 				if (!ios) {
 					touchevent += ' touchend.superfish';
 				}
@@ -82,7 +93,7 @@
 
 				if ($ul.length > 0 && $ul.is(':hidden')) {
 					$this.one('click.superfish', false);
-					if (e.type === 'MSPointerDown') {
+					if (e.type === 'MSPointerDown' || e.type === 'pointerdown') {
 						$this.trigger('focus');
 					} else {
 						$.proxy(over, $this.parent('li'))();
@@ -248,10 +259,4 @@
 		onDestroy: $.noop
 	};
 
-	// soon to be deprecated
-	$.fn.extend({
-		hideSuperfishUl: methods.hide,
-		showSuperfishUl: methods.show
-	});
-
-})(jQuery);
+})(jQuery, window);
